force-app/main/default/objects/Baggage_Operation__c/Baggage_Operation__c.object-meta.xml
<CustomObject>
    <label>Baggage Operation</label>
    <nameField>
        <displayFormat>BAG-{0000}</displayFormat>
        <label>Baggage Operation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baggage Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>