force-app/main/default/objects/Baggage_Operation__c/fields/Baggage_Crew__c.field-meta.xml
<CustomField>
    <fullName>Baggage_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Baggage Crew</label>
    <referenceTo>Ground_Crew__c</referenceTo>
    <relationshipLabel>Baggage Operations</relationshipLabel>
    <relationshipName>Baggage_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>