force-app/main/default/objects/Baggage_Operation__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Baggage Operations</relationshipLabel>
    <relationshipName>Baggage_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>