force-app/main/default/objects/Baggage_Operation__c/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loading</fullName>
            </value>
            <value>
                <fullName>Unloading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>