force-app/main/default/objects/Baggage_Operation__c/fields/Total_Bags__c.field-meta.xml
<CustomField>
    <fullName>Total_Bags__c</fullName>
    <label>Total Bags</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>