force-app/main/default/objects/Baggage_Operation__c/fields/Total_Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_Kg__c</fullName>
    <label>Total Weight (Kg)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>