force-app/main/default/objects/Baggage_Operation__c/validationRules/End_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Start_Time__c)),
NOT(ISBLANK(End_Time__c)),
End_Time__c &lt;= Start_Time__c
)</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>End Time must be after Start Time.</errorMessage>
</ValidationRule>