force-app/main/default/objects/Baggage_Operation__c/validationRules/Total_Bags.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Bags</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Bags__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Total_Bags__c</errorDisplayField>
    <errorMessage>Total Bags cannot be negative.</errorMessage>
</ValidationRule>